--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -21,7 +21,7 @@
 
   <body>
     <div id="wrap">
-      # include 'bit/header.html'
+      ## include 'bit/header.html'
       # include 'bit/announcement.html'
       # block header
       # endblock
@@ -31,7 +31,7 @@
         # endblock
       </div>
     </div>
-    # include 'bit/footer.html'
+    ## include 'bit/footer.html'
     # include 'bit/script.html'
     # block scripts
     # endblock
