--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Exo+2);
 @import "../lib/bootstrap/less/bootstrap";
 @import "../lib/font-awesome/font-awesome";
 @import "../lib/nprogress/nprogress";
