--- a/main/static/src/style/variables.less
+++ b/main/static/src/style/variables.less
@@ -5,3 +5,8 @@
 
 @nprogress-color:         @brand-primary;
 @nprogress-spinner-top:   @navbar-height + @nprogress-spinner-right;
+
+@jumbotron-bg:            white;
+
+@font-family-base:        "Exo 2", @font-family-sans-serif;
+
