--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -4,10 +4,24 @@
   <div class="jumbotron text-center">
     <div class="container">
       <h1>{{config.CONFIG_DB.brand_name}}</h1>
-      <p>Hello, world!</p>
+
+      <ul class="list-inline lead">
+        <li><a href="https://google.com/+PanayiotisLipiridis"><i class="fa fa-fw fa-google-plus"></i></a></li>
+        <li><a href="https://twitter.com/lipis"><i class="fa fa-fw fa-twitter"></i></a></li>
+        <li><a href="https://facebook.com/lipis"><i class="fa fa-fw fa-facebook"></i></a></li>
+        <li><a href="https://linkedin.com/in/lipis/"><i class="fa fa-fw fa-linkedin"></i></a></li>
+        <li><a href="http://stackoverflow.com/users/8418/lipis"><i class="fa fa-fw fa-stack-overflow"></i></a></li>
+        <li><a href="https://github.com/lipis"><i class="fa fa-fw fa-github"></i></a></li>
+        <li><a href="https://bitbucket.com/lipis"><i class="fa fa-fw fa-bitbucket"></i></a></li>
+
+      </ul>
     </div>
   </div>
 # endblock
 
 # block content
+  <div class="row">
+    <div class="col-sm-2 col-sm-offset-5 text-nowrap">
+    </div>
+  </div>
 # endblock
