Added event redirect

--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -13,7 +13,7 @@
         <li><a href="http://stackoverflow.com/users/8418/lipis"><i class="fa fa-fw fa-stack-overflow"></i></a></li>
         <li><a href="https://github.com/lipis"><i class="fa fa-fw fa-github"></i></a></li>
         <li><a href="https://bitbucket.com/lipis"><i class="fa fa-fw fa-bitbucket"></i></a></li>
-
+        <li><a href="mailto:yo@lip.is"><i class="fa fa-fw fa-envelope-o"></i></a></li>
       </ul>
     </div>
   </div>
