Added more projects

--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -14,54 +14,80 @@
     <table class="table table-bordered table-hover">
       <tbody>
         <tr>
-          <th colspan="2">For developers</th>
+          <th colspan="2">For developers (open source)</th>
         </tr>
         <tr>
-          <td><a href="https://gae-init.appspot.com">gae-init</a></td>
-          <td></td>
+          <td class="col-xs-3"><a href="https://gae-init.appspot.com">gae-init</a></td>
+          <td class="col-xs-7">
+            <strong>gae-init</strong> is the easiest way to kick start new
+            applications on Google App Engine using Flask, Bootstrap and tons
+            of other cool features.
+          </td>
         </tr>
         <tr>
           <td><a href="http://babel.gae-init.appspot.com">gae-init-babel</a></td>
-          <td></td>
+          <td>
+            Clone of <strong>gae-init</strong> project, with i18n and L10n
+            support.
+          </td>
         </tr>
         <tr>
           <td><a href="http://upload.gae-init.appspot.com">gae-init-upload</a></td>
-          <td></td>
+          <td>
+            Clone of <strong>gae-init</strong> project, with Google Cloud
+            Storage support.
+          </td>
         </tr>
         <tr>
           <td><a href="http://debug.gae-init.appspot.com">gae-init-debug</a></td>
-          <td></td>
+          <td>
+            Clone of <strong>gae-init</strong> project, with more debug tools.
+          </td>
         </tr>
         <tr>
           <td><a href="https://gae-init.appspot.com/signin/">gae-init-auth</a></td>
-          <td></td>
+          <td>
+            Clone of <strong>gae-init</strong> project, up to 10 more OAuth
+            options.
+          </td>
         </tr>
         <tr>
           <td><a href="http://docs.gae-init.appspot.com">gae-init-docs</a></td>
-          <td></td>
+          <td>
+            The documentation and the tutorial for the <strong>gae-init</strong>
+            projects.
+          </td>
         </tr>
         <tr>
           <td><a href="http://lipis.github.io/bootstrap-social/">Bootstrap Social</a></td>
-          <td></td>
+          <td>Social Sign-In Buttons made in pure CSS based on Bootstrap and Font Awesome.</td>
         </tr>
         <tr>
           <td><a href="http://lipis.github.io/flag-icon-css/">flag-icon-css</a></td>
-          <td></td>
+          <td>CSS for vector based country flags.</td>
         </tr>
         <tr>
           <td><a href="https://github.com/lim/webapp-sceleton">WebApp Sceleton</a></td>
-          <td></td>
+          <td>
+            A nice starting point for CoffeeScript, Less, Jasmine, Grunt, Bower
+            and more..
+          </td>
         </tr>
         <tr>
           <th colspan="2">Pet Projects</th>
         </tr>
         <tr>
           <td><a href="http://lim-life-line.appspot.com">Life Line</a></td>
-          <td></td>
+          <td>
+            See all the places that you've visited on a map like a line.
+          </td>
         </tr>
         <tr>
           <td><a href="http://hurry-app.appspot.com">Hurry App</a></td>
-          <td>Hurry App is a URL based counter. It is good for launch dates, milestones, birthdays, anniversaries, you name it.</td>
+          <td>
+            Hurry App is a URL based counter. It is good for launch dates,
+            milestones, birthdays, anniversaries, you name it.
+          </td>
         </tr>
         <tr>
           <td><a href="http://www.thesmallestcreature.com">The smallest Creature</a></td>
@@ -69,7 +95,10 @@
         </tr>
         <tr>
           <td><a href="http://latest.priventapp.com">Privent</a></td>
-          <td></td>
+          <td>
+            Privent is a web application to store all your photos, organized as
+            events, privetly and only share them with people you know.
+          </td>
         </tr>
         <tr>
           <td>
@@ -77,26 +106,43 @@
             <a href="http://www.kiebdoj.com/">Aleksandra</a>,
             <a href="http://mwdao.ksymeon.com/">Kostas</a>
           </td>
-          <td></td>
+          <td>
+            Portfolios for photo enthusiasts or professionals. Built to be fast
+            and easy to user for everyone.
+          </td>
         </tr>
         <tr>
           <td><a href="https://code.google.com/p/chess-at-nite/">Chess At Nite</a></td>
-          <td></td>
+          <td>
+            A quite powerfull chess engine that was done during the AI course
+            at the university. It was the only one in the history of the course
+            that our professor couldn't beat. I was mostly responsible for the
+            move generator, the overall architecture and the UI of the app.
+          </td>
         </tr>
         <tr>
           <th colspan="2">For 3rd Paries</th>
         </tr>
         <tr>
           <td><a href="http://www.dodonegone.com">DoDoneGone</a></td>
-          <td></td>
+          <td>
+            DoDoneGone helps people with anxiety problems to do what their fear
+            would otherwise prevent them from doing. This could be driving the
+            bus, shopping, speaking in public or climbing on a ladder.
+          </td>
         </tr>
         <tr>
           <td><a href="http://eyetribe-dev.appspot.com/">The Eye Tribe</a></td>
-          <td></td>
+          <td>
+            One of the suggested official web site for The Eye Tribe company.
+          </td>
         </tr>
         <tr>
           <td><a href="http://less-enigma.appspot.com">Enigma</a></td>
-          <td></td>
+          <td>
+            A nice way for companies to get instant feedback from their
+            employees.
+          </td>
         </tr>
       </tbody>
     </table>
