--- a/main/static/src/style/base.less
+++ b/main/static/src/style/base.less
@@ -23,3 +23,13 @@ body {
   margin: auto;
   display: block;
 }
+
+.jumbotron {
+  a {
+    color: fade(black, 32%);
+    &:hover,
+    &:active {
+      color: fade(black, 80%);
+    }
+  }
+}
