--- a/main/static/src/style/gae.less
+++ b/main/static/src/style/gae.less
@@ -1,7 +1,10 @@
 .gae-talk {
+  .jumbotron {
+    margin: 0;
+  }
   iframe {
     width: 100%;
-    height: 620px;
+    height: 558px;
     border: 1px solid black;
 
     // Extra Small
@@ -11,7 +14,7 @@
 
     // Small
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-      height: 480px;
+      height: 435px;
     }
   }
 }
