--- a/main/templates/gae-talk.html
+++ b/main/templates/gae-talk.html
@@ -1,21 +1,7 @@
 # extends 'base.html'
 
 # block header
-  <div class="jumbotron text-center">
-    <div class="container">
-      <h1>{{config.CONFIG_DB.brand_name}}</h1>
-      <ul class="list-inline lead">
-        <li><a href="https://google.com/+PanayiotisLipiridis"><i class="fa fa-fw fa-google-plus"></i></a></li>
-        <li><a href="https://twitter.com/lipis"><i class="fa fa-fw fa-twitter"></i></a></li>
-        <li><a href="https://facebook.com/lipis"><i class="fa fa-fw fa-facebook"></i></a></li>
-        <li><a href="https://linkedin.com/in/lipis/"><i class="fa fa-fw fa-linkedin"></i></a></li>
-        <li><a href="http://stackoverflow.com/users/8418/lipis"><i class="fa fa-fw fa-stack-overflow"></i></a></li>
-        <li><a href="https://github.com/lipis"><i class="fa fa-fw fa-github"></i></a></li>
-        <li><a href="https://bitbucket.com/lipis"><i class="fa fa-fw fa-bitbucket"></i></a></li>
-        <li><a href="mailto:yo@lip.is"><i class="fa fa-fw fa-envelope-o"></i></a></li>
-      </ul>
-    </div>
-  </div>
+  # include 'bit/jumbotron.html'
 # endblock
 
 # block content
