--- a/main/static/src/style/welcome.less
+++ b/main/static/src/style/welcome.less
@@ -11,7 +11,8 @@
   }
 
   ul {
-    margin-bottom: @line-height-computed * 2;
+    margin-top: @line-height-computed;
+    margin-bottom: @line-height-computed * 1.4;
     li {
       margin-bottom: @line-height-computed / 2;
     }
