--- a/main/templates/bit/jumbotron.html
+++ b/main/templates/bit/jumbotron.html
@@ -1,12 +1,13 @@
 <div class="jumbotron">
   <div class="container">
     <h1 class="text-center">{{config.CONFIG_DB.brand_name}}</h1>
+    <h4 class="text-center">Panayiotis Lipiridis</h4>
     <ul class="list-unstyled list-inline lead text-center">
       <li><a href="https://google.com/+PanayiotisLipiridis"><span class="fa fa-fw fa-google-plus"></span></a></li>
+      <li><a href="http://stackoverflow.com/users/8418/lipis"><span class="fa fa-fw fa-stack-overflow"></span></a></li>
       <li><a href="https://github.com/lipis"><span class="fa fa-fw fa-github"></span></a></li>
       <li><a href="https://twitter.com/lipis"><span class="fa fa-fw fa-twitter"></span></a></li>
       <li><a href="https://linkedin.com/in/lipis/"><span class="fa fa-fw fa-linkedin"></span></a></li>
-      <li><a href="http://stackoverflow.com/users/8418/lipis"><span class="fa fa-fw fa-stack-overflow"></span></a></li>
       <li><a href="https://facebook.com/lipis"><span class="fa fa-fw fa-facebook"></span></a></li>
       <li><a href="mailto:yo@lip.is"><span class="fa fa-fw fa-envelope-o"></span></a></li>
     </ul>
