--- a/main/templates/bit/jumbotron.html
+++ b/main/templates/bit/jumbotron.html
@@ -1,10 +1,11 @@
 <div class="jumbotron">
   <div class="container">
+    <img class="photo" src="//gravatar.com/avatar/a8518c33a76987dd41dd26497563fee9?d=identicon&r=x&s=512" alt="Panayiotis (Lipis) Lipiridis">
     <h1 class="text-center">{{config.CONFIG_DB.brand_name}}</h1>
     <h4 class="text-center">Panayiotis Lipiridis</h4>
     <ul class="list-unstyled list-inline lead text-center">
       <li><a href="https://google.com/+PanayiotisLipiridis"><span class="fa fa-fw fa-google-plus"></span></a></li>
-      <li><a href="http://stackoverflow.com/users/8418/lipis"><span class="fa fa-fw fa-stack-overflow"></span></a></li>
+      <li><a href="https://stackoverflow.com/users/8418/lipis"><span class="fa fa-fw fa-stack-overflow"></span></a></li>
       <li><a href="https://github.com/lipis"><span class="fa fa-fw fa-github"></span></a></li>
       <li><a href="https://twitter.com/lipis"><span class="fa fa-fw fa-twitter"></span></a></li>
       <li><a href="https://linkedin.com/in/lipis/"><span class="fa fa-fw fa-linkedin"></span></a></li>
@@ -22,8 +23,8 @@
       <li><a href="https://gae-init.appspot.com"><span class="fa fa-fw fa-github"></span> gae-init</a></li>
       <li><a href="http://magic.gae-init.appspot.com"><span class="fa fa-fw fa-magic"></span> gae-init-magic</a></li>
       <li><a href="https://lipis.github.io/bootstrap-social"><span class="fa fa-fw fa-github"></span> bootstrap-social</a></li>
-      <li><a href="https://lipis.github.io/flag-icon-css"><span class="fa fa-fw fa-github"></span> flag-icon-css</a></li>
-
+      <li><a href="https://lipis.github.io/flag-icon-css"><span class="fa fa-fw fa-flag"></span> flag-icon-css</a></li>
+      <li><a href="https://pss-camera.appspot.com"><span class="fa fa-fw fa-camera"></span> timelapse</a></li>
     </ul>
   </div>
 </div>
