--- a/main/templates/bit/jumbotron.html
+++ b/main/templates/bit/jumbotron.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <div class="container">
     <img class="photo" src="//gravatar.com/avatar/a8518c33a76987dd41dd26497563fee9?d=identicon&r=x&s=512" alt="Panayiotis (Lipis) Lipiridis">
-    <h1 class="text-center">{{config.CONFIG_DB.brand_name}}</h1>
+    <h1 class="text-center">Lipis</h1>
     <h4 class="text-center">Panayiotis Lipiridis</h4>
     <ul class="list-unstyled list-inline lead text-center">
       <li><a href="https://google.com/+PanayiotisLipiridis"><span class="fa fa-fw fa-google-plus"></span></a></li>
@@ -25,6 +25,8 @@
       <li><a href="https://lipis.github.io/bootstrap-social"><span class="fa fa-fw fa-github"></span> bootstrap-social</a></li>
       <li><a href="https://lipis.github.io/flag-icon-css"><span class="fa fa-fw fa-flag"></span> flag-icon-css</a></li>
       <li><a href="https://pss-camera.appspot.com"><span class="fa fa-fw fa-camera"></span> timelapse</a></li>
+      <li><a href="http://githubstats.lip.is"><span class="fa fa-fw fa-line-chart"></span> GitHub Stats</a></li>
+      <li><a href="https://electron-crash-reporter.appspot.com/"><span class="fa fa-fw fa-bomb"></span> Electron Crash Reporter</a></li>
     </ul>
   </div>
 </div>
