--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Exo+2);
+@import url(https://fonts.googleapis.com/css?family=Exo+2);
 @import "../../ext/font-awesome/less/font-awesome";
 @import "../../ext/bootstrap/less/bootstrap";
 @import "../../ext/nprogress/nprogress";
