--- a/main/templates/bit/jumbotron.html
+++ b/main/templates/bit/jumbotron.html
@@ -4,11 +4,12 @@
     <h1 class="text-center">Lipis</h1>
     <h4 class="text-center">Panayiotis Lipiridis</h4>
     <ul class="list-unstyled list-inline lead text-center">
-      <li><a href="https://google.com/+PanayiotisLipiridis"><span class="fa fa-fw fa-google-plus"></span></a></li>
+      <li><a href="https://medium.com/@lipis"><span class="fa fa-fw fa-medium"></span></a></li>
       <li><a href="https://stackoverflow.com/users/8418/lipis"><span class="fa fa-fw fa-stack-overflow"></span></a></li>
       <li><a href="https://github.com/lipis"><span class="fa fa-fw fa-github"></span></a></li>
       <li><a href="https://twitter.com/lipis"><span class="fa fa-fw fa-twitter"></span></a></li>
       <li><a href="https://linkedin.com/in/lipis/"><span class="fa fa-fw fa-linkedin"></span></a></li>
+      <li><a href="https://google.com/+PanayiotisLipiridis"><span class="fa fa-fw fa-google-plus"></span></a></li>
       <li><a href="https://facebook.com/lipis"><span class="fa fa-fw fa-facebook"></span></a></li>
       <li><a href="mailto:yo@lip.is"><span class="fa fa-fw fa-envelope-o"></span></a></li>
     </ul>
@@ -21,10 +22,12 @@
     </ul>
     <ul class="list-unstyled lead">
       <li><a href="https://gae-init.appspot.com"><span class="fa fa-fw fa-github"></span> gae-init</a></li>
-      <li><a href="http://magic.gae-init.appspot.com"><span class="fa fa-fw fa-magic"></span> gae-init-magic</a></li>
+      <li><a href="http://magic.gae-init.com"><span class="fa fa-fw fa-magic"></span> gae-init-magic</a></li>
       <li><a href="https://lipis.github.io/bootstrap-social"><span class="fa fa-fw fa-github"></span> bootstrap-social</a></li>
       <li><a href="https://lipis.github.io/flag-icon-css"><span class="fa fa-fw fa-flag"></span> flag-icon-css</a></li>
       <li><a href="https://pss-camera.appspot.com"><span class="fa fa-fw fa-camera"></span> timelapse</a></li>
+      <li><a href="https://lim-life-line.appspot.com"><span class="fa fa-fw fa-globe"></span> Life Line</a></li>
+      <li><a href="https://hurry-app.appspot.com"><span class="fa fa-fw fa-clock-o"></span> Hurry App</a></li>
       <li><a href="http://githubstats.lip.is"><span class="fa fa-fw fa-line-chart"></span> GitHub Stats</a></li>
       <li><a href="https://electron-crash-reporter.appspot.com/"><span class="fa fa-fw fa-bomb"></span> Electron Crash Reporter</a></li>
     </ul>
