--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -3,29 +3,32 @@
 # block header
   <div class="jumbotron">
     <div class="container">
-      <h1>{{config.CONFIG_DB.brand_name}}</h1>
-      <p>Hello, world!</p>
+      <img class="photo" src="//gravatar.com/avatar/a8518c33a76987dd41dd26497563fee9?d=identicon&r=x&s=512" alt="Panayiotis (Lipis) Lipiridis">
+      <h1>Lipis</h1>
+      <h4>Panayiotis Lipiridis</h4>
+      <ul class="list-unstyled list-inline lead">
+        <li><a href="https://medium.com/@lipis"><span class="fa fa-fw fa-medium"></span></a></li>
+        <li><a href="https://stackoverflow.com/users/8418/lipis"><span class="fa fa-fw fa-stack-overflow"></span></a></li>
+        <li><a href="https://github.com/lipis"><span class="fa fa-fw fa-github"></span></a></li>
+        <li><a href="https://twitter.com/lipis"><span class="fa fa-fw fa-twitter"></span></a></li>
+        <li><a href="https://linkedin.com/in/lipis/"><span class="fa fa-fw fa-linkedin"></span></a></li>
+        <li><a href="https://facebook.com/lipis"><span class="fa fa-fw fa-facebook"></span></a></li>
+        <li><a href="mailto:yo@lip.is"><span class="fa fa-fw fa-envelope-o"></span></a></li>
+      </ul>
     </div>
   </div>
 # endblock
 
 # block content
-  <div class="row">
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <h2>Heading</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <h2>Heading</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <h2>Heading</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="col-sm-6 col-md-12 col-lg-3">
-      <h2>Heading</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
+  <ul class="list-unstyled lead">
+    <li><a href="https://stackoverflow.com/cv/lipis"><span class="fa fa-fw fa-stack-overflow"></span> StackOverflow CV</a></li>
+  </ul>
+  <ul class="list-unstyled lead">
+    <li><a href="https://gae-init.appspot.com"><span class="fa fa-fw fa-github"></span> gae-init</a></li>
+    <li><a href="http://magic.gae-init.com"><span class="fa fa-fw fa-magic"></span> gae-init-magic</a></li>
+    <li><a href="https://lipis.github.io/bootstrap-social"><span class="fa fa-fw fa-github"></span> bootstrap-social</a></li>
+    <li><a href="https://lipis.github.io/flag-icon-css"><span class="fa fa-fw fa-flag"></span> flag-icon-css</a></li>
+    <li><a href="https://pss-camera.appspot.com"><span class="fa fa-fw fa-camera"></span> timelapse</a></li>
+    <li><a href="https://hurry-app.appspot.com"><span class="fa fa-fw fa-clock-o"></span> Hurry App</a></li>
+  </ul>
 # endblock
