--- a/main/templates/bit/footer.html
+++ b/main/templates/bit/footer.html
@@ -9,6 +9,10 @@
         # endif
       </p>
     # endif
-    <p>&copy; {{datetime.today().year}} - {{config.CONFIG_DB.brand_name}}</p>
+    <p>
+      &copy; {{datetime.today().year}}
+      - {{config.CONFIG_DB.brand_name}}
+      - <a href="https://github.com/lipis/lipis.dev"><span class="fa fa-github"></span> Source Code</a>
+    </p>
   </div>
 </footer>
