--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -5,7 +5,7 @@
     <div class="container">
       <img class="photo" src="//gravatar.com/avatar/a8518c33a76987dd41dd26497563fee9?d=identicon&r=x&s=512" alt="Panayiotis (Lipis) Lipiridis">
       <h1>Lipis</h1>
-      <h4>Panayiotis Lipiridis</h4>
+      <h3>Panayiotis Lipiridis</h3>
       <ul class="list-unstyled list-inline lead">
         <li><a href="https://medium.com/@lipis"><span class="fa fa-fw fa-medium"></span></a></li>
         <li><a href="https://stackoverflow.com/users/8418/lipis"><span class="fa fa-fw fa-stack-overflow"></span></a></li>
@@ -15,6 +15,7 @@
         <li><a href="https://facebook.com/lipis"><span class="fa fa-fw fa-facebook"></span></a></li>
         <li><a href="mailto:yo@lip.is"><span class="fa fa-fw fa-envelope-o"></span></a></li>
       </ul>
+      <h4>Web Dude at <a href="https://wire.com">Wire</a></h4>
     </div>
   </div>
 # endblock
