--- a/main/templates/bit/footer.html
+++ b/main/templates/bit/footer.html
@@ -11,8 +11,8 @@
     # endif
     <p>
       &copy; {{datetime.today().year}}
-      - {{config.CONFIG_DB.brand_name}}
-      - <a href="https://github.com/lipis/lipis.dev"><span class="fa fa-github"></span> Source Code</a>
+      &mdash; {{config.CONFIG_DB.brand_name}}
+      &mdash; <a href="https://github.com/lipis/lipis.dev"><span class="fa fa-github"></span> Source Code</a>
     </p>
   </div>
 </footer>
