--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,7 +4,7 @@
     # include 'bit/meta.html'
     <title>
       # block title
-        {{title + ' |' if title}}
+        {{title + ' ·' if title}}
       # endblock
       {{config.CONFIG_DB.brand_name}}
     </title>
