--- a/main/templates/bit/graph.html
+++ b/main/templates/bit/graph.html
@@ -1,5 +1,5 @@
 <meta name="twitter:card" content="summary_large_image">
-<meta property="og:title" content="{{title + ' | ' if title}}{{config.CONFIG_DB.brand_name}}">
+<meta property="og:title" content="{{title + ' · ' if title}}{{config.CONFIG_DB.brand_name}}">
 <meta name="description" property="og:description" content="{{description}}">
 <meta property="og:type" content="website">
 <meta property="og:url" content="{{canonical_url or request.host_url}}">
