--- a/main/static/src/style/welcome.less
+++ b/main/static/src/style/welcome.less
@@ -1,6 +1,8 @@
 .welcome {
   .jumbotron {
     text-align: center;
+    background-color: @bg-color;
+    border-bottom: 1px solid darken(@bg-color, 10%);
   }
 
   .photo {
