--- a/main/static/src/style/footer.less
+++ b/main/static/src/style/footer.less
@@ -13,9 +13,9 @@ body {
   display: table;
   width: 100%;
   height: @footer-height;
-  border-top: 1px solid @hr-border;
+  border-top: 1px solid darken(@bg-color, 10%);
   color: @text-muted;
-  background-color: @well-bg;
+  background-color: @bg-color;
   text-align: center;
   & > .container {
     display: table-cell;
